--- a/ConnectFour.css
+++ b/ConnectFour.css
@@ -1,3 +1,15 @@
 #board {
 	background: yellow;
+	margin-left: auto;
+	margin-right: auto;
+	padding-left: 0;
+	padding-right: 0;
+	display: block;
+}
+
+h1 {
+	text-align: center;
+	font-family: "Comic Sans MS", cursive, sans-serif;
+	font-size: 40px;
+	color: red;
 }
