--- a/ConnectFour.css
+++ b/ConnectFour.css
@@ -8,15 +8,28 @@
 }
 
 h1 {
+	margin: 0;
 	text-align: center;
 	font-family: "Comic Sans MS", cursive, sans-serif;
-	font-size: 40px;
+	font-size: 80px;
 	color: red;
 }
 
 a {
 	position: absolute;
-	left: 1300px;
-	top: 100px;
-	font-size: 20px;
+	left: 1400px;
+	top: 300px;
+	font-size: 30px;
+}
+
+#turn {
+	text-align: center;
+	font-size: 30px;
+}
+
+button {
+	position: absolute;
+	top: 370px;
+	left: 1380px;
+	font-size: 30px;
 }
