--- a/ConnectFour.css
+++ b/ConnectFour.css
@@ -13,7 +13,9 @@ h1 {
 	font-family: "Comic Sans MS", cursive, sans-serif;
 	font-size: 80px;
 	color: red;
+	text-shadow: 4px 4px #330099;
 }
+
 
 a {
 	position: absolute;
@@ -32,4 +34,32 @@ button {
 	top: 370px;
 	left: 1380px;
 	font-size: 30px;
+}
+
+#winner {
+	text-align: center;
+	font-family: "Comic Sans MS", cursive, sans-serif;
+	font-size: 60px;
+
+	-webkit-animation: moveStart 5s infinite;
+	-webkit-animation-direction: alternate;
+
+	animation: moveStart 5s infinite;
+	animation-direction: alternate;
+}
+
+@-webkit-keyframes moveStart {
+	0%	{color: red; left: 0px;}
+	25%	{color: blue; left: 200px;}
+	50%	{color: green; left: 200px;}
+	75%	{color: yellow; left: 200px;}
+	100%{color: red; left: 0px;}
+}
+
+@keyframes moveStart {
+	0%	{color: red; left: 0px;}
+	25%	{color: blue; left: 200px;}
+	50%	{color: green; left: 200px;}
+	75%	{color: yellow; left: 200px;}
+	100%{color: red; left: 0px;}
 }
