added transitions to images on instruction page

--- a/Instructions.css
+++ b/Instructions.css
@@ -25,6 +25,13 @@ img {
 	width: 180px;
 	height: 150px;
 	padding-bottom: 10px;
+	-webkit-transition: width 2s, height 2s;
+	transition: width 2s, height 2s;
+}
+
+img:hover {
+	width: 360px;
+	height: 300px;
 }
 
 #luck {
